# quill

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  codex.toml  opencode.json
.claude/commands/: spec-handoff.md  spec-init.md  spec-status.md  spec-update.md
.specnative/: CLI.md  MCP.md  SCHEMA.md  specnative_mcp.py
.specnative/archetypes/: README.md
.specnative/templates/: README.md
.specnative/templates/decisions/: README.md
.specnative/templates/specs/: README.md
containers/: Dockerfile.content-service  Dockerfile.mosquitto  Dockerfile.search-service  Dockerfile.users-service  Dockerfile.web  README.md
containers/dev/: compose.yml
containers/dev/entrypoints/: content.sh  search.sh  users.sh
containers/dev/nginx/: nginx.conf
content-service/: Cargo.toml
content-service/src/: main.rs
quill-telemetry/: Cargo.toml
quill-telemetry/src/: lib.rs
quill-wasm/: Cargo.toml
quill-wasm/src/: lib.rs
scripts/: build.mk  db.just  lint.mk  mqtt.just  mqtt.sh
search-service/: Cargo.toml
search-service/src/: main.rs
search-service/src/adapters/: mod.rs  model_downloader.rs  onnx_embedding_provider.rs  stub_embedding_provider.rs
search-service/src/application/: hybrid_search.rs  index_content.rs  mod.rs
search-service/src/infrastructure/: db.rs  inbox_worker.rs  mod.rs  vector_store.rs
search-service/src/ports/: embedding_provider.rs  mod.rs
search-service/src/transport/: http.rs
spec-native/: ARCHITECTURE.md  COMMANDS.md  CONVENTIONS.md  DECISIONS.md  PRODUCT.md  README.md  ROADMAP.md  SESSION.md  STACK.md  TRACEABILITY.md
spec-native/pipelines/: CD.md  CI.md  README.md
spec-native/specs/: README.md
spec-native/tasks/: README.md  TASKS.template.md
spec-native/workflows/: IMPLEMENTATION.md  PLANNING.md  README.md  REVIEW.md
users-service/: Cargo.toml
users-service/src/: main.rs
users-service/src/adapters/: mod.rs  sqlite_user_repository.rs
users-service/src/application/: create_user.rs  get_user.rs  mod.rs
users-service/src/domain/: mod.rs  user.rs
users-service/src/infrastructure/: db.rs  mod.rs  outbox_publisher.rs
users-service/src/ports/: mod.rs  user_repository.rs
users-service/src/transport/: health.rs  http.rs
web/: index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
web/src/: main.ts  types.ts
(+54 files in other folders)
