[package]
name = "quill-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
tracing-opentelemetry = "0.28"

# When plugging OTLP, add the exporter and switch to a batch processor:
# opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
# opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
