[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "search-service"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
rumqttc = "0.24"
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
