[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "search-service"
path = "src/main.rs"

[features]
default = ["stub-embeddings"]
stub-embeddings = []
onnx-embeddings = ["ort", "tokenizers", "ureq"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
rumqttc = "0.24"
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
tokenizers = { version = "0.23", optional = true }
ureq = { version = "2", optional = true }
